Add changes from pull 71